Update post tag

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
           
         </ul>
       </nav>
+      <nav>
+        <h6>Blog</h6>
+        <ul>
+          <li><a href="/hikari-for-Jekyll/">Home</a></li>
+          <li><a href="/hikari-for-Jekyll/tags/">Tags</a></li>
+        </ul>
+      </nav>
     </div>
 
 
