--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Homepage
+title: Home
 ---
 
 <div id="home">
   <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in paginator.posts %}
     <li itemscope itemtype="http://schema.org/BlogPosting">
       <a href="{{ site.baseurl }}{{ post.url }}" itemprop="url">
         <div class="p-wrap">
@@ -24,15 +24,15 @@ title: Homepage
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
   {% if paginator.next_page %}
-  <a href="/page/{{paginator.next_page}}" class="older">Older</a>
+  <a href="{{ site.baseurl }}/page/{{paginator.next_page}}" class="older">Older</a>
   {% else %}
   <span class="next">Older</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-    <a href="/" class="newer">Newer</a>
+    <a href="{{ site.baseurl }}/" class="newer">Newer</a>
     {% else %}
-    <a href="/page/{{paginator.previous_page}}" class="newer">Newer</a>
+    <a href="{{ site.baseurl }}/page/{{paginator.previous_page}}" class="newer">Newer</a>
     {% endif %}
   {% else %}
   <span class="previous">Newer</span>
