--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       
 
-      <title> Homepage | materi for jekyll</title>
+      <title> Home | materi for jekyll</title>
       
 <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
 
@@ -198,7 +198,7 @@
       </main>
 
       <footer>
-        <small>Powered by Jekyll - Theme: <a href="https://github.com/ogaclejapan/materi-for-jekyll">materi for jekyll</a> - &copy; ogaclejapan</small>
+        <small>Powered by Jekyll - Theme: <a href="https://github.com/ogaclejapan/materi-for-jekyll">materi</a> - &copy; ogaclejapan</small>
       </footer>
 
     </div>
