--- a/tags.html
+++ b/tags.html
@@ -4,10 +4,11 @@ title: Tags
 ---
 
 <div id="home">
-  {% if site.tags %}
+  {% if site.tags.size > 0 %}
   <div class="label">{{ page.title }}</div>
   <ul class="posts">
-    {% for tag in site.tags %}
+    {% assign sorted_tags = (site.tags | sort:0) %}
+    {% for tag in sorted_tags %}
     {% assign tag_id = tag[0] %}
     {% if site.data.tags[tag_id] %}
     <li>
